--- a/1109.md
+++ b/1109.md
@@ -32,6 +32,7 @@ Markdown
 
 <h1> 一级标题 </h1>
 ref: https://coding.net/help/doc/project/markdown.html
+电子版笔记胡优势是椒便于快速查找而且还可以胡到完整版改版历史在atom中按 ctrl+shift+f。
 
 git clone 命令
 
