--- a/da/1112.md
+++ b/da/1112.md
@@ -89,7 +89,9 @@ ES6 的特点， 简单来说：
 
 [Babel 的官网](http://babeljs.io/)
 
-官网上对他的描述是： 一个js 的编译器
+官网上对他的描述是： 一个js 的编译器（compiler）
+Babel 编译过程， 输入es6 （es5就是浏览器可以支持的js 版本）
+
 
 到Babel 官网点击 try it out .可进入Babel 的在线使用环境 左侧我们如果输入ES6 语句 例如：
 ```
@@ -104,3 +106,81 @@ var i = 1
 
 使用 Babel 的在线编译环境，实际项目中没有办法使用，因为比较麻烦
 实际中 我们是使用命令工具 来自动化完成 编辑工作的 ，具体涉及到的工具就是 Webpack+Babel。
+
+
+Webpack 是一个 bundler (把多个js模块打包成一个文件)，但是同时 Webpack也是目前最常用的一个 **预处理工具** 可以配合多种工具来使用 Babel 也只是其中一种。
+
+当代职业开发者 手写的代码基本上都是浏览器不支持的，例如：
+
+- SASS ---> css
+- HAML/JSX ---> html
+- ES6 --->ES5 JS
+
+但是 只需要进行一下 **预处理**（ES6编译ES5，进行JS代码的压缩，文件合并，SASS转css） 就可以真正运行了。Webpack 就是一个预处理工具。用不用预处理步骤 是开发者和职业开发者的明显区别。
+
+
+### 初始化node项目
+
+
+初始化node项目要用到 **“npm inint"**  生成‘package-json’
+安装Webpack 和 Babel模块：
+- npm install webpack --save-dev  安装webpack命令
+- npm install --save-dev babel-loader babel-core 安装babel 命令
+webpack 使用时 需要增加它的配置文件 ，在配置文件里 ， 记录webpack各项配置，它的默认配置文件
+`webpack.config.js`
+没有`webpack.config.js`这个文件的话需要自己创建一个，
+
+- package.json  script 字段， 定义我们的命令
+- 定义命令内容：
+```
+var path = require('path');
+
+module.exports = {
+    entry: path.resolve(__dirname, 'index.js'),
+    output: {
+        //path: path.resolve(__dirname, 'build'),
+        filename: 'bundle.js'
+    },
+    module: {
+      loaders: [
+        { test: /\.js$/, exclude: /node_modules/, loader: "babel-loader" }
+      ]
+    }
+};
+```
+
+- 上面配置文件的三大要素
+- 1：输入文件 index.js 就是我们手写的ES6代码
+- 2：输出文件 bundle.js 里面的代码是浏览器支持的
+- 3：指定编译器 babel，babel的使用方式是作为一个 webpack的loader
+- 配置 babel-loader，添加
+
+
+### node 项目 方法
+- 创建一个文件夹 然后在命令行让它变成一个 node项目 用命令 **npm init**
+执行命令之后需要自己写的选项：
+
+  description: es6 demo
+
+  author:作者名
+
+- 在文件夹里进行安装各种包：
+- 1：npm install webpack --save-dev
+安装webpack包
+- 2：npm install --save-dev babel-loader babel-core
+还有这么一推
+
+- 3：./node_modules/.bin/webpack
+
+注：**在敲这个命令之前要把 package.json 里的script字段的改成**（
+"test": "node -v",
+"build": "./node_modules/.bin/webpack -w"）
+最后的 -w 表示对这个命令进行监听 加上之后就可以不必每次改完代码之后都在敲一遍这个命令了！
+- 4：在命令行敲npm run test和npm run build命令
+
+注：**这里的 run 后面必须得是和3里的script字段名字一致 如（test，build）**
+- 5：npm install --save-dev babel-preset-latest
+
+敲这个命令的作用是让 webpack 吧es6变成es5  需要安装
+
+差不多就这些了！
