--- a/da/1113.md
+++ b/da/1113.md
@@ -3,3 +3,150 @@
 ### 进入ES6的实质学习
 
 [学习es6的参考书](http://es6.ruanyifeng.com/)
+
+ES6的很多新特性就是在原有的es5基础上添加了 **语法糖** 也就是 使用es5 可以实现 但是如果用es6的语法实现就会看起来代码更简洁。
+
+关于这些小的语法糖 peter 的建议是  不用一次都学会  因为用老的es5的语法 写到es6的项目中也是 没毛病的。
+
+具体就是指书中的这些章节：
+- let和const命令
+- 变量的解构赋值
+- 字符串的扩展
+- 正则的扩展
+- 数值的扩展
+- 数组的扩展
+- 函数的扩展
+- 数组的扩展
+- 对象的扩展
+
+这些可以逐步学习，逐步用到项目中。但是，对于我们后续要开始的 node js
+ reactjs 这个方向的学习，目前必须掌握的主要是
+
+- 模块化开发， import/export
+- 面向对象编程， class 关键字的使用、
+
+其实这两个知识点也是紧密相关的，我们先从 面向对象的编程开始学起。
+
+
+### Objet Oriented Programing
+
+[参考](http://www.haoqicat.com/o-o-js)
+
+基本概念：面向对象编程，是一种基于 **对象**  这号给概念的编程方法论，
+对象中可以包含数据一般被称为 **属性**， 也可以包含函数 一般被称为 **方法**。
+
+### OOP： 类和对象
+
+类（class）：是多个对象（object）的抽象，对象是类的实例。
+例如：人，就可以是一个类，比如人可以有名字，身高这些属性，但是没有具体值，所以说 类 可以理解为一个空的木桶。对象是类的实例，具体的一个人就可以叫做对象
+
+>人这个类的一个对象
+
+例如peter就可以是人的这个类的一个对象，对象的特点是有具体数据的，例如给定一个人peter，那我们就可以得到他的具体姓名，身高。所以对象可以理解为木桶中装的水。
+
+下面用代码的形式来表述一下类和对象的关系，在面向对象编程的过程中 我们都是先定义类，
+
+```
+class Person{
+  constructor(name){
+    this.name = name;
+}
+}
+
+```
+
+constructor(是一个新的属性，叫做构造函数特点是只要被呼叫就会立即执行)
+sayHello（它的特点是被呼叫后不会立即执行）
+
+上面的name 就是一个属性，constructor（）就是一个方法
+有了类之后我们就可以实例化出，无穷个对象了
+```
+let peter= new Person('happypeter');
+console.log(peter.name)
+```
+上面 new 是一个关键字，‘意思是建一个关键实例’。 得到的’peter 就是一个对象， 我们可以得到 peter 中的name 的具体值
+
+下面我们对一些不台海理解的点，在详细解释一下
+
+###  constructor 构造函数
+
+一个类里面可以定义多个方法，如下：
+
+```
+、class Person{
+  constructor(){
+    console.log('hello')
+  }
+  sayHello(){
+    console.log('hello2')
+  }
+}
+let peter = new Person;
+```
+
+上面‘constructor’是一个特殊的方法（拼写是严格的），它就特点是在对象被创建的时候，也就是‘let peter = new Person’ 这一句执行的时候，自动被呼叫的一个方法，而 其他的方法都不会执行
+
+同时，constructor 也可以接受参数，如下
+
+```
+class Person{
+  constructor(name){
+    console.log('My name is + name ')
+  }
+}
+let peter = new Person('peter')
+```
+如上 给constructor传递参数的方式， 就是在 new 一个新对象的时候，在类名之后直接加括号在传递， 例如:'Person('peter')'
+
+### 定义 自己的方法
+
+constructor是一个特殊的方法，它就拼写就是constructor拼错就不会被自动执行了。或者说， 就成了一个普通方法了。通常我们的类里面都会定义很多普通方法。例如：
+
+```
+class Person{
+  sayHello(name){
+    console.log('hello '+name)
+  }
+}
+let peter = new Person;
+```
+
+那么创建新对象的时候， sayHello 不会被自动执行 ，那么如何来调用呢？
+
+```
+peter.sayHello('lily')
+```
+
+### this 关键字
+
+this 指的是当前对象
+
+```
+class Person{
+  constructor(name){
+
+  }
+  sayName(){
+    console.log('my name is '+ name )
+  }
+}
+let peter = new Person ('peter')
+peter.sayName();
+```
+
+此时 如果直接看 peter.sayName()会发现 ‘name’ 值为空
+解决这个问题可以用this关键字；
+```
+class Person{
+  constructor(name){
+    this.name = name
+  }
+  sayName(){
+    console.log('my name is '+ this.name );
+  }
+}
+let peter = new Person ('peter');
+peter.sayName();
+```
+
+这样sayName()函数中就可以拿到 this.name的值了！
