--- a/da/1113.md
+++ b/da/1113.md
@@ -150,3 +150,55 @@ peter.sayName();
 ```
 
 这样sayName()函数中就可以拿到 this.name的值了！
+
+
+# 下午：
+
+
+### ES6的常用语法
+
+- let： let是一个块级作用域：块级作用域就是用{}包裹起来的东西，在这个作用域里用let声明一个东西那么也只有在这个作用域里的东西才能拿到。
+例如：
+
+```
+{
+  let x = 3
+}
+console.log(x)
+```
+就不会输出3因为它拿不到里面的属性！
+用let声明不会变量提升 跟var 不一样。
+但是，如果在{}里在加上一个{}那么第二个{}就可以拿到第一个{}里的东西！
+
+
+- const： ----也是声明一个变量但是这个变量只能声明一次 还不能更改！
+
+- es6 里同时声明多个变量例如：
+```
+let [x,y] = [1,2]
+```
+值也可以是一个函数的返回值例如:
+```
+let [x,y]=a()
+function a (){
+  return [1,3]
+}
+
+```
+
+- es6里 如果属性名和属性值名字一样 那么可一直接省略 属性值例如：
+```
+
+```
+- 字符串模块； es5里字符串相加 需要用：+等 但是，在es6里可以这样写
+```
+let name = xxx
+let age = 20
+console.log（`${name} age ${age}`）
+```
+先用一个反引号 加号可用空格代替 如果需要加入变量需要${}大括号里加变量名
+  注：这个只能用作字符串拼接其他的暂时不知道
+
+### Default + Rest + Spread
+- Default 默认参数值
+现在可以在定义函数的时候指定参数的默认值了，而不用像以前那样通过逻辑或操作符来达到目的了.
